// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render properly with an error 1`] = `
.emotion-3 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-3 tr {
  background-color: #252525;
}

.emotion-3 tr .gear {
  opacity: 0;
}

.emotion-3 tr .gear:focus {
  opacity: 1;
}

.emotion-3 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-3 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-3 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-3 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-3 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-3 tr:hover .gear {
  opacity: 1;
}

.emotion-3 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-3 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-3 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  pointer-events: none;
}

.emotion-1 {
  height: 600px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 16px;
  line-height: 20px;
}

<div>
  <table
    className="emotion-3"
  >
    <thead>
      <tr>
        <th
          className="emotion-0"
        >
          ColumnOne, ColumnTwo
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="emotion-2"
      >
        <td
          colSpan={1}
        >
          <div
            className="emotion-1"
          >
            <svg
              data-file-name="error.svg"
            />
            <br />
             Hmmm, something went wrong.
            <br />
             Please try refreshing.
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
</div>
`;

exports[`<Table /> should render properly without data 1`] = `
.emotion-3 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-3 tr {
  background-color: #252525;
}

.emotion-3 tr .gear {
  opacity: 0;
}

.emotion-3 tr .gear:focus {
  opacity: 1;
}

.emotion-3 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-3 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-3 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-3 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-3 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-3 tr:hover .gear {
  opacity: 1;
}

.emotion-3 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-3 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-3 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  pointer-events: none;
}

.emotion-1 {
  height: 600px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 16px;
  line-height: 20px;
}

<div>
  <table
    className="emotion-3"
  >
    <thead>
      <tr>
        <th
          className="emotion-0"
        >
          ColumnOne, ColumnTwo
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="emotion-2"
      >
        <td
          colSpan={1}
        >
          <div
            className="emotion-1"
          >
            Loading...
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
</div>
`;
